--- a/.env.example
+++ b/.env.example
@@ -26,3 +26,8 @@ POSTGRES_PASSWORD=law_ai_password
 # CourtListener API Token (optional - for fetching case law)
 # Get your token from: https://www.courtlistener.com/api/
 COURTLISTENER_TOKEN=
+
+# Database Auto-Restore Configuration
+# Set to 'true' to automatically restore from ./data/db_backups/ on first database initialization
+# WARNING: Only works when creating a fresh database (empty postgres_data directory)
+AUTO_RESTORE_BACKUP=false
