--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,8 +10,12 @@ services:
       POSTGRES_DB: law_ai
       POSTGRES_USER: law_ai_user
       POSTGRES_PASSWORD: law_ai_password
+      # Set to 'true' to enable auto-restore from ./data/db_backups on first init
+      AUTO_RESTORE_BACKUP: ${AUTO_RESTORE_BACKUP:-false}
     volumes:
       - ./postgres_data:/var/lib/postgresql/data
+      - ./docker/init-scripts:/docker-entrypoint-initdb.d
+      - ./data/db_backups:/backups:ro
     restart: unless-stopped
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U law_ai_user -d law_ai"]
