--- a/.gitignore
+++ b/.gitignore
@@ -30,7 +30,7 @@ data/
 
 # Databases
 law_ai.db
-law_ai.db-*
+# law_ai.db-*  # Commented out to allow backups in repo
 qdrant_storage/
 postgres_data/
 
